fixing transparency issue with sponsor images in dark mode

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -235,3 +235,7 @@ thead {
 .md-search-result {
     background-color: var(--primary-background-color) !important;
 }
+
+.sponsor {
+    background-color: white;
+}
